services page setup

--- a/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.css
+++ b/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.css
@@ -44,15 +44,7 @@
     width: 80%;
   }
 }
-.services-con .grid-stack-con {
-  background-color: rgba(13, 21, 34, 0);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.services-con .grid-stack-con .myServicesCon {
+.services-con .myServicesCon {
   display: flex;
   justify-content: space-around;
   align-items: top;
@@ -60,11 +52,8 @@
   flex-wrap: wrap;
   gap: 30px;
   background-color: rgba(13, 21, 34, 0);
-  width: 60%;
-  min-width: 700px;
-  margin: 0 auto;
 }
-.services-con .grid-stack-con .myServicesCon .serviceCard {
+.services-con .myServicesCon .serviceCard {
   display: flex;
   justify-content: center;
   align-items: top;
@@ -79,73 +68,167 @@
   padding: 5px 0;
   transition: all 0.3s linear;
 }
-.services-con .grid-stack-con .myServicesCon .serviceCard:hover {
+.services-con .myServicesCon .serviceCard:hover {
   transform: scale(1.2);
   border: 2px solid royalblue;
 }
 @media only screen and (min-width: 750px) {
-  .services-con .grid-stack-con .myServicesCon .serviceCard {
-    width: 30%;
-    max-width: 300px;
+  .services-con .myServicesCon .serviceCard {
+    width: 35%;
+    max-width: 400px;
     height: 200px;
     border-radius: 10px;
     padding: 5px 10px;
-    border: 2px solid red;
   }
 }
-.services-con .grid-stack-con .myServicesCon .serviceCard h1 {
+.services-con .myServicesCon .serviceCard h1 {
   font-size: 50px;
 }
 @media only screen and (min-width: 750px) {
-  .services-con .grid-stack-con .myServicesCon .serviceCard h1 {
+  .services-con .myServicesCon .serviceCard h1 {
     font-size: 100px;
   }
 }
-.services-con .grid-stack-con .myServicesCon .serviceCard p {
+.services-con .myServicesCon .serviceCard p {
   font-size: 8px;
   color: rgb(150, 171, 217);
 }
 @media only screen and (min-width: 750px) {
-  .services-con .grid-stack-con .myServicesCon .serviceCard p {
+  .services-con .myServicesCon .serviceCard p {
     font-size: 20px;
   }
 }
-.services-con .grid-stack-con .stack {
-  border: 2px solid royalblue;
-  margin: 0 auto;
+.services-con .tech-stack {
   margin-top: 50px;
-  width: 200px;
-  height: 200px;
+  font-size: 10px;
+}
+@media only screen and (min-width: 750px) {
+  .services-con .tech-stack {
+    margin-top: 100px;
+    font-size: 20px;
+  }
+}
+.services-con .stack {
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 75%;
+  height: 250px;
   position: relative;
   border-radius: 50%;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
   box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
-  -webkit-animation: yy 15s linear infinite;
-          animation: yy 15s linear infinite;
+  transition: all 0.3s linear;
 }
-.services-con .grid-stack-con .stack .icon {
+@media only screen and (min-width: 750px) {
+  .services-con .stack {
+    margin-top: 150px;
+    width: 600px;
+    height: 600px;
+  }
+}
+.services-con .stack:hover {
+  transform: scale(1.1);
+}
+.services-con .stack .mern-stack {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
   position: absolute;
+  top: 30%;
+  width: 100%;
+}
+.services-con .stack .mern-stack h1 {
+  font-size: 40px;
+}
+@media only screen and (min-width: 750px) {
+  .services-con .stack .mern-stack {
+    top: 30%;
+  }
+  .services-con .stack .mern-stack h1 {
+    font-size: 100px;
+  }
+}
+.services-con .stack .icon {
+  position: absolute;
+  font-size: 25px;
+}
+@media only screen and (min-width: 750px) {
+  .services-con .stack .icon {
+    font-size: 45px;
+  }
+}
+.services-con .stack .react {
+  right: 0;
   bottom: 0;
 }
-.services-con .grid-stack-con .stack .icon::before {
-  content: "HTML";
+@media only screen and (min-width: 750px) {
+  .services-con .stack .react {
+    font-size: 100px;
+  }
+}
+.services-con .stack .express {
+  right: 0;
   font-size: 30px;
 }
-@-webkit-keyframes yy {
-  0% {
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(0deg);
+@media only screen and (min-width: 750px) {
+  .services-con .stack .express {
+    font-size: 100px;
   }
 }
-@keyframes yy {
-  0% {
-    transform: rotate(360deg);
+.services-con .stack .node {
+  bottom: 0;
+}
+@media only screen and (min-width: 750px) {
+  .services-con .stack .node {
+    font-size: 100px;
   }
-  100% {
-    transform: rotate(0deg);
+}
+.services-con .stack .js {
+  bottom: 0;
+  left: 50%;
+}
+.services-con .stack .jq {
+  right: 0;
+  top: 22%;
+}
+.services-con .stack .gh {
+  right: 0;
+  top: 72%;
+}
+@media only screen and (min-width: 750px) {
+  .services-con .stack .mongodb {
+    font-size: 100px;
   }
+}
+.services-con .stack .ts {
+  bottom: 0;
+  left: 25%;
+}
+.services-con .stack .redux {
+  bottom: 0;
+  left: 72%;
+}
+.services-con .stack .next {
+  right: 0;
+  top: 45%;
+}
+.services-con .stack .css {
+  top: 50%;
+}
+.services-con .stack .scss {
+  top: 25%;
+}
+.services-con .stack .sql {
+  top: 72%;
+}
+.services-con .stack .post {
+  left: 25%;
+}
+.services-con .stack .bs {
+  left: 70%;
+}
+.services-con .stack .html {
+  left: 50%;
 }
 .services-con .pun {
   border-top: 1px solid royalblue;
