--- a/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.css
+++ b/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.css
@@ -71,6 +71,7 @@
 .services-con .myServicesCon .serviceCard:hover {
   transform: scale(1.2);
   border: 2px solid royalblue;
+  background-color: rgba(26, 41, 66, 0.838);
 }
 @media only screen and (min-width: 750px) {
   .services-con .myServicesCon .serviceCard {
@@ -121,12 +122,9 @@
 @media only screen and (min-width: 750px) {
   .services-con .stack {
     margin-top: 50px;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
   }
-}
-.services-con .stack:hover {
-  transform: scale(1.1);
 }
 .services-con .stack .mern-stack {
   display: flex;
@@ -148,8 +146,33 @@
     top: 30%;
   }
   .services-con .stack .mern-stack h1 {
-    font-size: 100px;
+    font-size: 70px;
   }
+}
+.services-con .stack .mern-stack .punt {
+  border-top: 1px solid royalblue;
+  border-bottom: 1px solid royalblue;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  height: 30px;
+  margin: 0 auto;
+  width: 80%;
+  overflow: hidden;
+  position: absolute;
+}
+.services-con .stack .mern-stack .punt .slideCont {
+  -webkit-animation: 20s linear infinite;
+          animation: 20s linear infinite;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding-top: 5px;
+}
+.services-con .stack .mern-stack .punt .slideCont p {
+  font-size: 13px;
+  color: rgb(150, 171, 217);
+  word-spacing: 5px;
+  letter-spacing: 3px;
 }
 .services-con .stack .icon {
   position: absolute;
@@ -157,7 +180,7 @@
 }
 @media only screen and (min-width: 750px) {
   .services-con .stack .icon {
-    font-size: 45px;
+    font-size: 30px;
   }
 }
 .services-con .stack .react {
@@ -167,7 +190,7 @@
 }
 @media only screen and (min-width: 750px) {
   .services-con .stack .react {
-    font-size: 100px;
+    font-size: 50px;
   }
 }
 .services-con .stack .express {
@@ -176,7 +199,7 @@
 }
 @media only screen and (min-width: 750px) {
   .services-con .stack .express {
-    font-size: 100px;
+    font-size: 50px;
   }
 }
 .services-con .stack .node {
@@ -185,7 +208,7 @@
 }
 @media only screen and (min-width: 750px) {
   .services-con .stack .node {
-    font-size: 100px;
+    font-size: 50px;
   }
 }
 .services-con .stack .js {
@@ -205,7 +228,7 @@
 }
 @media only screen and (min-width: 750px) {
   .services-con .stack .mongodb {
-    font-size: 100px;
+    font-size: 50px;
   }
 }
 .services-con .stack .ts {
@@ -237,28 +260,4 @@
 }
 .services-con .stack .html {
   left: 50%;
-}
-.services-con .pun {
-  border-top: 1px solid royalblue;
-  border-bottom: 1px solid royalblue;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-  height: 30px;
-  margin: 0 auto;
-  margin-top: 30px;
-  overflow: hidden;
-}
-.services-con .pun .slideCon {
-  -webkit-animation: 20s linear infinite;
-          animation: 20s linear infinite;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  padding-top: 5px;
-}
-.services-con .pun .slideCon p {
-  font-size: 13px;
-  color: rgb(150, 171, 217);
-  word-spacing: 5px;
-  letter-spacing: 3px;
 }/*# sourceMappingURL=ServiceStyle.css.map */
