--- a/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.css
+++ b/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.css
@@ -118,6 +118,7 @@
   border-radius: 50%;
   box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   transition: all 0.3s linear;
+  opacity: 0.5;
 }
 @media only screen and (min-width: 750px) {
   .services-con .stack {
