--- a/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.scss
+++ b/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.scss
@@ -153,6 +153,7 @@ $special-Color: #4c5eff;
     border-radius: 50%;
     box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
     transition: all 0.3s linear;
+    opacity: 0.5;
 
     @include responsive(bigphone) {
       margin-top: 50px;
