--- a/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
+++ b/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
@@ -25,14 +25,18 @@
   border-radius: 10px;
   padding: 20px 5px;
   width: 100%;
-  max-width: 2000px;
+  max-width: 1600px;
 }
 .aboutMe .aboutMe-container {
-  font-size: 10px;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: top;
+  flex-direction: row;
 }
 @media only screen and (min-width: 750px) {
   .aboutMe .aboutMe-container {
-    font-size: 20px;
+    font-size: 25px;
   }
 }
 .aboutMe .mappedHeading {
